refactor: sonarLint 반영