@@ -1,15 +1,11 @@
 package study.playground.springboot.core.api.controller.v1.response;
 
 import com.fasterxml.jackson.annotation.JsonRootName;
-import lombok.Getter;
 import study.playground.springboot.core.api.service.model.SettlementRequestHistoryCommand;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 @JsonRootName("settlementRequestHistory")
-@Getter
 public class SettlementRequestHistoryResponse {
     private List<SettlementResponse> responses;
 
@@ -26,7 +22,7 @@ public class SettlementRequestHistoryResponse {
     private static List<SettlementResponse> mapToResponse(List<SettlementRequestHistoryCommand.SettlementRequestHistory> settlementHistories) {
         return settlementHistories.stream()
                 .map(SettlementResponse::from)
-                .collect(toList());
+                .toList();
     }
 
     private static class SettlementResponse {
@@ -46,18 +42,6 @@ public class SettlementRequestHistoryResponse {
                     requestHistory.getTotalSettlementAmount().getAmount(),
                     requestHistory.getSettlementStatus().getMessage()
             );
-        }
-
-        public Long getSettlementId() {
-            return settlementId;
-        }
-
-        public long getTotalSettlementAmount() {
-            return totalSettlementAmount;
-        }
-
-        public String getSettlementStatus() {
-            return settlementStatus;
         }
     }
 
